2020-11-23  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/poke-default.css: Add styling classes for PVM disassembly.

2020-11-23  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm-program.h: Prototypes for pvm_program_init and
	pvm_program_fini.
	* libpoke/pvm-program.c (pvm_program_init): New function.
	(pvm_program_fini): Likewise.
	(pvm_disassemble_program): Adapt to new API.
	(pvm_disassemble_program_nat): Likewise.
	* libpoke/pvm.c (pvm_init): Call pvm_program_init.
	(pvm_shutdown): Call pvm_program_fini.
	* libpoke/pvm-program.c (pvm_jitter_print_char): New function.
	(pvm_jitter_print_chars): Likewise.
	* libpoke/pvm.jitter: Adapt printers to new API.

2020-11-23  Jose E. Marchesi  <jemarch@gnu.org>

	* cfg.mk (sc_tests_listed_in_makefile_am): Rewrite to detect
	errors in both directions and be more efficient.
	* etc/hacking.org (List the test files in testsuite/Makefile.am):
	Update accordingly.
	* HACKING: Regenerate.

2020-11-23  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_pr_func): Avoid generating a
	tor-fromr sequence in methods that do not get additional
	arguments.

2020-11-23  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/poke.rec (Support for ++ and --): Removed as fixed.

2020-11-23  Jose E. Marchesi  <jemarch@gnu.org>

	* bootstrap: Updated from latest gnulib.
	* DEV-NEWS: Update.
	* bootstrap.conf (bootstrap_option_hook): New function.
	(bootstrap_print_option_usage_hook): Likewise.
	(bootstrap_post_import_hook): Honor --jitter-srcdir.

2020-11-23  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-tab.y: The INC and DEC operators are
	non-associative.

2020-11-23  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (Arithmetic Operators): Mention ++ and --.
	(Offset Operations): Likewise.

2020-11-23  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-ast.h (PKL_AST_ORDER_PRE): Rename from PKL_AST_PRE.
	(PKL_AST_ORDER_POST): Rename from PKL_AST_POST.
	(PKL_AST_SIGN_INCR): Rename from PKL_AST_INCR.